looks like they replaced bitwarden rs with vaultwarden, so removing it as an option
adding more to test

trying to reduce some more dups

trying to ignore case when sorting

improved code and now pull from source

cleanup

creating action to keep up-to-date (#1)

* testing

* Update python-app.yml

* Delete tests.yml

* Delete FUNDING.yml

* Update python-app.yml

* Update python-app.yml

* Update python-app.yml

* Apply automatic changes

making workflow run every night

auto PR instead of commit and
 trying to add tests back in

trying to get PR working

testing

testing

testing

testing

auto PR works now

testing new PR flow

adding back on push

testing if workflow still shows as failure

fixing test to work

this should work

testing

Test2 (#7)

* testing updated code

* testing

* test

* testing

* testing

* fixed?

* testing

hopefully fixes issues

updating url

adding another template to pull from

[create-pull-request] automated change (#8)

Update python-app.yml

[create-pull-request] automated change (#9)

Update python-app.yml

[create-pull-request] automated change (#10)

[create-pull-request] automated change (#11)

[create-pull-request] automated change (#12)

[create-pull-request] automated change (#13)

Update portainer-v2-latest.json

Update portainer-v2-latest.json

Create build_listv3.py

Update python-app.yml

Update build_listv3.py

Update python-app.yml

Update build_listv3.py

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "yaml-validator": "^3.0.0"
   },
   "scripts": {
-    "pretest": "jsonlint Template/template.json --quiet",
+    "pretest": "jsonlint Template/portainer-v2-latest.json --quiet",
     "test": "yaml-validator Template/Stack/*"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SelfhostedPro/selfhosted_templates.git"
+    "url": "git+https://github.com/djdanielsson/awesome-saas.git"
   },
   "author": "Qballjos",
   "license": "GPLv3"
