--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,7 +3,7 @@
 
 name: Python application
 
-on: 
+on:
   push:
   schedule:
     - cron: "0 0 * * *"
@@ -40,4 +40,14 @@ jobs:
     - name: Run python script
       run: cd Template; python build_list.py
 
+    - name: Get current date
+      id: date
+      run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+
     - uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        branch: ${{ steps.date.outputs.date }}
+        create_branch: true
+
+    - name: Create Pull Request
+      uses: peter-evans/create-pull-request@v4
