--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,10 +44,12 @@ jobs:
       id: date
       run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
 
-    - uses: stefanzweifel/git-auto-commit-action@v4
-      with:
-        branch: ${{ steps.date.outputs.date }}
-        create_branch: true
+    # - uses: stefanzweifel/git-auto-commit-action@v4
+    #   with:
+    #     branch: ${{ steps.date.outputs.date }}
+    #     create_branch: true
 
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v4
+      with:
+        branch: ${{ steps.date.outputs.date }}
