--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -52,4 +52,5 @@ jobs:
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v4
       with:
+        token: ${{ secrets.TOKEN }}
         branch: ${{ steps.date.outputs.date }}
