--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,6 +19,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Run JSON Lint
+      env:
+        REPORT_ONLY: true
+        SHOW_ERRORS: true
+      run: bash <(curl -s https://raw.githubusercontent.com/CICDToolbox/json-lint/master/pipeline.sh)
+
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
@@ -53,5 +59,5 @@ jobs:
       uses: peter-evans/create-pull-request@v4
       with:
         token: ${{ secrets.TOKEN }}
-        push-to-fork: djdanielsson/awesome-saas
+        # push-to-fork: djdanielsson/awesome-saas
         branch: ${{ steps.date.outputs.date }}
