--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,6 +37,7 @@ jobs:
         pip install flake8 requests
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
+# TODO get python lint working
 #     - name: Lint with flake8
 #       run: |
 #         # stop the build if there are Python syntax errors or undefined names
@@ -47,18 +48,33 @@ jobs:
     - name: Run python script
       run: cd Template; python build_list.py
 
-    - name: Get current date
-      id: date
-      run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
-
-    # - uses: stefanzweifel/git-auto-commit-action@v4
-    #   with:
-    #     branch: ${{ steps.date.outputs.date }}
-    #     create_branch: true
+    # - name: Get current date
+    #   id: date
+    #   run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
 
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v4
       with:
         token: ${{ secrets.TOKEN }}
-        branch: ${{ steps.date.outputs.date }}
+        branch: auto_update # ${{ steps.date.outputs.date }}
+
+    - name: Auto commit if PR fails
+      id: auto_commit
+      if: ${{ failure() }}
+      uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        branch: auto_update # ${{ steps.date.outputs.date }}
+        create_branch: true
+
+    - name: Create Pull Request
+      if: steps.auto_commit.outcome == 'success'
+      run: |
+        curl \
+          -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.TOKEN }}"\
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/djdanielsson/awesome-saas/pulls \
+          -d '{"title":"Auto PR","body":"Please check to see if these changes break in portainer before merging.","head":"auto_update","base":"main"}'
+
 ...
