--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 requests
+        pip install flake8 requests pyyaml
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
 # TODO get python lint working
